2005-08-09 Chris Wiebe
	Fix bug# 106564: platform keybindings
	plugin.xml

2005-08-08 Alain Magloire
	Fix PR 106340: ArrayOutOfBoundException
	* src/org/eclipse/cdt/internal/ui/actions/GoToNextPreviousMemberAction.java

2005-07-28 David Inglis

	Disable browsing and hierarchy views/perspectives and open hierarchy action as per
	https://bugs.eclipse.org/bugs/show_bug.cgi?id=102195
	
	* plugins.xml

2005-07-22 Alain Magloire
	Fix copyright.

2005-07-21 Chris Wiebe
	Fix PR 104442
	* src/org/eclipse/cdt/internal/ui/text/FastCPartitionScanner.java

2005-07-09 Alain Magloire
	Fix PR 102324: Fire event in the property page for change contentType
	* src/org/eclipse/cdt/internal/ui/preferences/CFileTypesPreferenceBlock.java
	* src/org/eclipse/cdt/internal/ui/preferences/CFileTypesPropertyPage.java

2005-07-09 Alain Magloire
	Fix PR 97963
	* src/org/eclipse/cdt/internal/ui/preferences/CEditorPreferncePage.java
	+ src/org/eclipse/cdt/internal/ui/preferences/PreviewSourceViewer.java

2005-07-09 Alain Magloire
	Fix PR 90419
	* src/org/eclipse/cdt/internal/coreext/util/CodeFormatterUtil.java
	* src/org/eclipse/cdt/internal/ui/editor/CEditor.java
	* src/org/eclipse/cdt/internal/ui/preferences/CEditorPreferencePage.java
	* src/org/eclipse/cdt/internal/ui/text/CSourceViewerConfiguration.java

2005-07-08 Alain Magloire
	Fix for the CFileType UI
	* src/org/eclipse/cdt/internal/ui/preferences/CFileTypesPreferenceBlock.java
	* src/org/eclipse/cdt/internal/ui/preferences/CFileTypesPropertyPage.java

2005-07-06 Vladimir Hirsl
	Disabled Add Folder/File button in CPathIncludeSymbolEntryPerFilePage.

	* src/org/eclipse/cdt/internal/ui/dialogs/cpaths/CPathEntryMessages.properties
	* src/org/eclipse/cdt/internal/ui/dialogs/cpaths/CPathIncludeSymbolEntryPerFilePage.java

2005-07-06 Alain Magloire
	Fix PR 99130: no leading underscore in the guard header name
	* src/org/eclipse/cdt/internal/ui/wizards/filewizard/NewSourceFIleGenerator.java

2005-07-06  Alain Magloire