@@ -1,0 +1,9 @@
+package org.eclipse.cdt.internal.ui.editor.asm;
+
+import org.eclipse.ui.editors.text.TextEditorActionContributor;
+
+public class ASMEditorActionContributor extends
+		TextEditorActionContributor {
+
+		// nothing for now
+}
